--- a/application/admin/view/order/order_care.html
+++ b/application/admin/view/order/order_care.html
@@ -14,7 +14,7 @@
 
             <div class="layui-card">
                 <div class="layui-card-body layui-card-body-padding">
-                    <table class="layui-hide" id="rule" lay-filter="rule" table-reload-id="tableReload" lay-size="sm"></table>
+                    <table class="layui-hide" id="order_care_data_list" lay-filter="order_care_data_list" table-reload-id="tableReload" lay-size="sm"></table>
                 </div>
             </div>
         </div>
@@ -29,13 +29,13 @@
 <!--表格头部按钮end-->
 
 <!--状态-->
-<script type="text/html" id="switchStatus">
-    <input type="checkbox" name="status" value="{{d.status}}" lay-skin="switch" lay-text="成功|失败" lay-filter="ruleStatus" {{ d.status == 1 ? 'checked' : '' }}>
+<script type="text/html" id="task_type">
+    <input type="checkbox" name="task_type" value="{{d.status}}" lay-skin="switch" lay-text="成功|失败" lay-filter="task_type" {{ d.status == 1 ? 'checked' : '' }}>
 </script>
 
 <!--状态-->
-<script type="text/html" id="switchIsmenu">
-    <input type="checkbox" name="ismenu" value="{{d.ismenu}}" lay-skin="switch" lay-text="{:__('Yes')}|{:__('No')}" lay-filter="ruleIsmenu" {{ d.ismenu == 1 ? 'checked' : '' }}>
+<script type="text/html" id="task_status">
+    <input type="checkbox" name="task_status" value="{{d.ismenu}}" lay-skin="switch" lay-text="{:__('Yes')}|{:__('No')}" lay-filter="task_status" {{ d.ismenu == 1 ? 'checked' : '' }}>
 </script>
 
 <!--操作-->
@@ -64,14 +64,14 @@
             ,form = layui.form
             ,weTable = layui.weTable
             ,formSearch = layui.formSearch
-//            ,laydate = layui.laydate
             ,toastr = layui.toastr;
+
+        /*********************表格初始化begin**************************/
         layer.load(0, {shade: false});
         var tableCommon = {
-            elem: '#rule'
-//            ,height:"100%"
+            elem: '#order_care_data_list'
+            ,formId:'search_form'  //查询form表单id
             ,method:'post'
-//            ,url:"{:url('Admin/auth.admin/index')}"
             ,url:"/sms_data.json" //对接请求后台数据
             ,id : 'tableReload'
             ,skin:'line'
@@ -85,8 +85,8 @@
                 {type:'checkbox', fixed: 'left',hide:true}
                 ,{field:'id', title: 'ID', sort: true, excel_width:15}
                 ,{field:'task_name', title: "任务名称", excel_width:15, minWidth: 120, searchList:{type:'input',operate:'LIKE'},}
-                ,{field:'task_type', title: "任务类型", excel_width:15, searchList:{type:'select',data:{"1":"持续开启","0":"固定时段"},'operate':'='}, minWidth: 120}
-                ,{field:'task_status', title: "任务状态", excel_width:15,templet: '#switchStatus', searchList:{type:'select',data:{"1":"成功","0":"失败"},'operate':'='}, minWidth: 120}
+                ,{field:'task_type', title: "任务类型", excel_width:15,templet: '#task_type', searchList:{type:'select',data:{"1":"持续开启","0":"固定时段"},'operate':'='}, minWidth: 120}
+                ,{field:'task_status', title: "任务状态", excel_width:15,templet: '#task_status', searchList:{type:'select',data:{"1":"成功","0":"失败"},'operate':'='}, minWidth: 120}
                 ,{field:'send_content', title:  "发送内容", excel_width:15, minWidth: 200}
                 ,{field:'create_time', title: "创建时间", excel_width:15, searchList:{type:'input',event:'date',operate: 'RANGE'}, minWidth: 120}
                 ,{field:'update_time', title: "更新时间", excel_width:15, searchList:{type:'input',event:'date',operate: 'RANGE'}, minWidth: 120}
@@ -112,43 +112,31 @@
                 }
             }
         }
-
         table.render(tableCommon); //数据表格初始化
-        formSearch.api.init(tableCommon); //搜索初始化
-
-//        laydate.render({
-//            elem: '#logintime_start' //指定元素
-//            ,type: 'datetime'
-//        });
-
-        //监听性别操作
-//        form.on('switch(ruleStatus)', function(obj){
-////            console.log(obj);
-//            layer.tips(this.value + ' ' + this.name + '：'+ obj.elem.checked, obj.othis);
-//        });
+        formSearch.api.init(tableCommon); //表单查询初始化
+        /*********************表格初始化end**************************/
 
         /**
          * 表格初始化
          */
-        weTable.api.init({
-            table : "rule",
+        /*weTable.api.init({
+            table : "order_care_data_list",
             tableid : "tableReload",
-            form:$("form#formRule"),
+            form:$("form#order_care_data_list"),
             tableCommon: tableCommon,
             extend : {
                 "add_url": "{:url('admin/order/task_add','',false)}",
                 "edit_url": "{:url('admin/order/task_add','',false)}/ids/",
             }
-        });
+        });*/
 
         /**
-         * 绑定监听事件
+         * 表单查询查询操作
          * */
-        weTable.api.bindevent();
-        formSearch.api.searchForm($("form#formRule"));
+        formSearch.api.searchForm($("form#search_form"));
 
-        //头工具栏事件
-        table.on('toolbar(rule)', function(obj){
+        //表头工具栏事件
+        table.on('toolbar(order_care_data_list)', function(obj){
             console.log(obj.event);
             if(obj.event == 'add_task') {
                 var url = "{:url('admin/order/task_add')}"
@@ -157,70 +145,22 @@
         })
 
         //表格工具栏事件
-        table.on('tool(rule)', function(obj){
+        table.on('tool(order_care_data_list)', function(obj){
             console.log(obj.event);
             if(obj.event == 'edit') {
-                var url = "{:url('admin/order/task_add')}"
-//                window.location.href = url;
-                we.api.open(url,'下单关怀 > 新建任务',{zIndex:19891017,shade: 0.4},['98%' , '90%']);
+                var url = "{:url('admin/order/task_add')}"; //对接后台编辑url
+                we.api.open(url,'下单关怀 > 编辑任务',{zIndex:19891017,shade: 0.4},['98%' , '90%']);
+            } else {
+                layer.confirm('请确定是否删除？',{
+                    title:'温馨提示',
+                }, function(index){
+                    var url = ""; //对接后台删除url
+                    we.api.ajax({"url":url,"data":{'ids':""},'tableid':'tableReload','action':'del'});
+                    layer.close(index);
+                });
             }
         })
-        //监听行工具事件
-        /* table.on('tool(rule)', function(obj){
-         var data = obj.data;
-         if(obj.event === 'del'){
-         layer.confirm('真的删除行么',{
-         skin: 'layui-layer-we',
-         title:'温馨提示',
-         }, function(index){
-         we.api.ajax({"url":"{:url('admin/auth.rule/del')}","data":{'ids':data.id},'tableid':'tableReload','action':'del'});
-         layer.close(index);
-         });
-         } else if(obj.event === 'view'){
-         var url = "{:url('admin/auth.rule/view','',false)}/id/" + data.id;
-         we.api.open(url,'查看');
-         } else if(obj.event === 'edit') {
-         var url = "{:url('admin/auth.rule/edit','',false)}/id/" + data.id;
-         we.api.open(url,'编辑');
-         }
-         });
 
-         //头工具栏事件
-         table.on('toolbar(rule)', function(obj){
-         var checkStatus = table.checkStatus(obj.config.id);
-         switch(obj.event){
-         case 'add':
-         //                    var data = checkStatus.data;
-         //                    layer.alert(JSON.stringify(data));
-         var url = "{:url('admin/auth.rule/edit','',false)}";
-         we.api.open(url,'添加规则');
-         break;
-         case 'del':
-         var data = checkStatus.data;
-         var idsArr = [];
-         if(data != "") {
-         $.each(data,function (index, value) {
-         idsArr.push(value.id);
-         });
-         layer.confirm('真的删除行么',{
-         skin: 'layui-layer-we',
-         title:'温馨提示',
-         }, function(index){
-         we.api.ajax({"url":"{:url('admin/auth.rule/del')}","data":{'ids':idsArr.join(',')},'tableid':'tableReload','action':'del'});
-         layer.close(index);
-         });
-         } else {
-         toastr.error('没有选择数据');
-         }
-         break;
-         case 'export':
-         toastr.warning('功能正在完善');
-         break;
-         case 'import':
-         toastr.warning('功能正在完善');
-         break;
-         };
-         });*/
 
     });
 </script>
